# Writing-a-C-Compiler-Writeup

./: .gitattributes  .gitignore  BOOK_NOTES.md  README.md  write-up.md
code/: CMakeLists.txt
code/src/: AST.h  CFG.cpp  CFG.h  CodeGen.cpp  ConstConvert.h  Lexer.cpp  Lexer.h  Parser.cpp  Rounding.h  Tacky.h  Token.cpp  Token.h  TypeTable.cpp  TypeTable.h  Types.cpp  main.cpp
code/src/backend/: RegAlloc.cpp
code/src/optimizations/: AddressTaken.cpp  CopyPropa.h  DeadStoreElim.cpp  DeadStoreElim.h  Optimize.cpp  UnreachableCodeElim.h
code/src/semantic_analysis/: CollectSwitchCases.cpp  CollectSwitchCases.h  LoopLabeling.h  TypeChecker.h
code/src/utils/: CodeGenPrettyPrint.h  RawDoubleHash.h  TackyPrettyPrint.h
code/tests/: TestFramework.h  test_compiler.cpp
code/tests/codegen/: test_valid_codegen.cpp
code/tests/lexing/: test_invalid_lexing.cpp  test_valid_lexing.cpp
code/tests/optimizations/: test_optimize_tacky.cpp
code/tests/parsing/: test_invalid_parsing.cpp  test_valid_parsing.cpp
code/tests/semantic_analysis/: test_invalid_semantic_analysis.cpp  test_valid_semantic_analysis.cpp
code/tests/tackygen/: test_valid_tackygen.cpp
code_analysis/: chapter_1.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_16.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_2.md  chapter_20.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md
progressive_implementation/chapter_1/src/: Assembly.h  CodeGen.h  Compiler.cpp  Compiler.h  Emit.cpp  Emit.h  (+1 more)
progressive_implementation/chapter_10/: CMakeLists.txt
progressive_implementation/chapter_10/src/: AST.h  Assembly.h  Compiler.cpp  Emit.cpp  Emit.h  Lexer.cpp  Parser.cpp  Parser.h  Symbols.h  Tacky.h  TackyGen.cpp  TackyGen.h  Token.cpp  Token.h  Types.h
progressive_implementation/chapter_10/src/backend/: CodeGen.cpp  CodeGen.h  InstructionFixup.cpp  InstructionFixup.h  ReplacePseudos.cpp  ReplacePseudos.h
progressive_implementation/chapter_10/src/semantic_analysis/: CollectSwitchCases.cpp  CollectSwitchCases.h  IdentifierResolution.cpp  IdentifierResolution.h  LoopLabeling.cpp  LoopLabeling.h  TypeChecker.cpp  TypeChecker.h  ValidateLabels.cpp
progressive_implementation/chapter_10/src/utils/: ASTPrettyPrint.h  CodeGenPrettyPrint.h  TackyPrettyPrint.h
progressive_implementation/chapter_11/: CMakeLists.txt
progressive_implementation/chapter_2/: CMakeLists.txt
(+511 files in other folders)
